kubernetes/apps/default/nextcloud/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-skeemahs.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  annotations:
    external-dns.alpha.kubernetes.io/target: ipv4.housefam.casa
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://nc.housefam.casa"
    gethomepage.dev/description: Self-hosted file sharing
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: nextcloud
    gethomepage.dev/name: Nextcloud
spec:
  hostnames: ["nc.housefam.casa"]
  parentRefs:
    - name: ipv4
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: nextcloud
          namespace: default
          port: 8080
